Added Renyi divevrgence bounds under mvpb/bounds_renyi/ and renamed mvpb/bounds/ to mvpb/bounds_alpha1_KL/. changed empirical-evaluation-jupyter.ipynb to allow for more experiments (by labeled_set size, alpha, and model config)

--- a/params.yaml
+++ b/params.yaml
@@ -5,6 +5,7 @@ max_iter: 1000
 nb_estimators: 100
 depth: 3
 optimize_lambda_gamma: True
+alpha: 1.0
 use_unlabeled: True
 
 to_binary: None # One of ["ovr", "ovo", "other",  None]
